# librw-wxWidgets-starter

./: .gitignore  CMakeLists.txt  README.md  version.inc
doc/: How to build - Windows.md
extdeps/: CMakeLists.txt
extdeps/EXPAT/: EXPAT.cmake
extdeps/JPEG/: JPEG.cmake
extdeps/PNG/: PNG.cmake
extdeps/TIFF/: TIFF.cmake
extdeps/ZLIB/: ZLIB.cmake
extdeps/wxWidgets/: wxWidgets.cmake
src/: CMakeLists.txt  MainFrame.cpp  MainFrame.h  ProjectDocument.cpp  ProjectDocument.h  ProjectView.cpp  ProjectView.h  RwCanvas.cpp  RwCanvas.h  RwGLContext.cpp  RwGLContext.h  RwStarter.h  RwStarterApp.cpp  RwStarterApp.h  RwStarterDocumentManager.cpp  RwStarterDocumentManager.h  main.cpp  wxRwCanvas.cpp  wxRwCanvas.h  wxRwGLContext.cpp  wxRwGLContext.h
src/camera/: camexamp.cpp  main.cpp  main.h  viewer.cpp
src/platform/msw/: rwstarter.manifest.in  rwstarter.rc.in
src/platform/osx/: Info.plist.in
src/platform/unix/: fhs.hpp.in  rwstarter.desktop
